compiler/testData/diagnostics/tests/callableReference/bound/functionCallWithoutArguments.fir.kt
fun test() = ("").<!UNRESOLVED_REFERENCE!>hashCode<!>::hashCode
